# wayland-compositor-thing

./: Cargo.toml  flake.nix
src/: backend.rs  lib.rs  main.rs  render.rs  state.rs
src/backend/: winit.rs  x11.rs
src/state/: compositor.rs  elements.rs  input.rs  xdg_shell.rs  xwayland.rs
src/state/xdg_shell/: grabs.rs  move_grab.rs  resize_grab.rs
wlcs-integration/: Cargo.toml
wlcs-integration/src/: lib.rs  main_loop.rs
