[package]
name = "wayland-compositor-thing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
smithay-egui = { path = "../smithay-egui"}
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
bitflags = "2.3.1"

[dependencies.smithay]
git = "https://github.com/Smithay/smithay"
default-features = false
features = [
    "backend_winit",
    "wayland_frontend",
    "desktop",
    "xwayland",
]
